# reason-glsl-optimizer

./: README.md  package.json  reglsloptimizer.opam
esy.lock/: index.json
src/: dune  explicit_deps.ml  glsloptimizer_stubs.c  reglsloptimizer.re  reglsloptimizer.rei
src/libglsloptimizer/: CMakeLists.txt  LICENSE.md  README.md  dune
src/libglsloptimizer/glsl/: glsl_optimizer.cpp  glsl_optimizer.h  ir_variable_refcount.cpp  ir_variable_refcount.h  link_uniform_block_active_visitor.cpp  link_uniform_block_active_visitor.h  link_uniform_blocks.cpp  loop_analysis.cpp  opt_dead_code.cpp  opt_vectorize.cpp
src/libglsloptimizer/util/: hash_table.c  hash_table.h
test/: dune  test_reglsloptimizer.expected  test_reglsloptimizer.re
